Proyecto3/api/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diabetes-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: diabetes-api
  template:
    metadata:
      labels:
        app: diabetes-api
    spec:
      containers:
      - name: api
        image: diabetes-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
