Proyecto3/api/k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diabetes-api-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: api.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: diabetes-api-service
            port:
              number: 80
